--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,13 @@ a:hover {
     text-decoration: underline;
 }
 
+hr {
+    border-style: none;
+    background-image: linear-gradient(to right, #069330 25%, #011DA9 25%, #011DA9 50%, #FE2015 50%, #FE2015 75%, #FFC001 75%, #FFC001 100%);
+    height: 2px;
+    opacity: 0.7;
+}
+
 .shadow {
     text-shadow: var(--background) 0em 0em 0.08em;
 }
