--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,14 +34,18 @@ hr {
     opacity: 0.7;
 }
 
-.shadow {
-    text-shadow: var(--background) 0em 0em 0.08em;
-}
-
-.page-header {
+header {
     padding: 5rem 6rem;
     text-align: center;
     background-image: linear-gradient(2rad, #155799, #159957);
+}
+
+p {
+    padding: 0em 0.5em;
+}
+
+.shadow {
+    text-shadow: var(--background) 0em 0em 0.08em;
 }
 
 .page-content {
