--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,9 +35,8 @@ a:hover {
 
 hr {
   border-style: none;
-  background-image: linear-gradient(to right, #069330 25%, #011DA9 25%, #011DA9 50%, #FE2015 50%, #FE2015 75%, #FFC001 75%, #FFC001 100%);
+  background-image: linear-gradient(to right, #3FA244 25%, #38387F 25%, #38387F 50%, #C40026 50%, #C40026 75%, #F2AB00 75%, #F2AB00 100%);
   height: 2px;
-  opacity: 0.7;
 }
 
 header {
@@ -48,6 +47,7 @@ header {
 
 footer > hr {
   background: var(--background-secondary);
+  opacity: 0.7;
 }
 
 p {
